# artifact-search-skill

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT-STATUS.md  README.md  current-sprint.md  project-overview.md  pyproject.toml
.claude/commands/: load-context.md
.github/workflows/: azure-static-web-apps-purple-forest-08206b80f.yml  deploy-backend.yml
docs/: deployment.md  production-bom.md
docs/specs/: backend-design.md  frontend-design.md  implementation-plan.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
sample_data/: README.md  azure_devops_work_items.json  figma_frames.md  icepanel_architecture.md  notion_structure.md
scripts/: deploy-backend.sh  seed_azure_devops.py
src/artifact_search/: __init__.py  __main__.py  api.py  config.py  models.py  router.py  search.py
src/artifact_search/connectors/: __init__.py  azure_devops.py  base.py  figma.py  icepanel.py  notion.py
